[package]
name = "toaster"
description = "Toaster is a forth interpreter named after a joke"
license-file = "LICENSE"
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/hardliner66/toaster"
repository = "https://github.com/hardliner66/toaster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
